--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ workflows:
   cron_fetch:
     triggers:
       - schedule:
-          cron: "20 23 * * *"
+          cron: "20 19-23 * * *"
           filters:
             branches:
               only:
