--- a/config.toml
+++ b/config.toml
@@ -131,3 +131,12 @@ res_id_dep = "synthese.csv"
 trendType = "normal"
 nom = "Taux d'occupation"
 unite = "%"
+
+[vaccins_vaccines_couv]
+dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
+res_id_fra = "vaccin_couv_fra.csv"
+res_id_reg = "vaccin_couv_reg.csv"
+res_id_dep = "vaccin_couv_dep.csv"
+trendType = "abnormal"
+nom = "Pourcentage de personnes complètement vaccinées"
+unite = "Pourcentage de personnes complètement vaccinées"
