--- a/config.toml
+++ b/config.toml
@@ -137,6 +137,9 @@ dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
 res_id_fra = "vaccin_couv_fra.csv"
 res_id_reg = "vaccin_couv_reg.csv"
 res_id_dep = "vaccin_couv_dep.csv"
+pop_id_fra = "pop_age_fra.csv"
+pop_id_reg = "pop_age_reg.csv"
+pop_id_dep = "pop_age_dep.csv"
 trendType = "abnormal"
 nom = "Part de la population majeure complètement vaccinée "
 unite = "Part de la population majeure complètement vaccinée "
@@ -146,6 +149,9 @@ dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
 res_id_fra = "vaccin_couv_fra.csv"
 res_id_reg = "vaccin_couv_reg.csv"
 res_id_dep = "vaccin_couv_dep.csv"
+pop_id_fra = "pop_age_fra.csv"
+pop_id_reg = "pop_age_reg.csv"
+pop_id_dep = "pop_age_dep.csv"
 trendType = "abnormal"
 nom = "Part de la population âgée de plus de 12 ans complètement vaccinée "
 unite = "Part de la population âgée de plus de 12 ans complètement vaccinée "
