Titres et unités des taux de variants

--- a/config.toml
+++ b/config.toml
@@ -162,8 +162,8 @@ res_id_fra = "prop_variants_fra.csv"
 res_id_reg = "prop_variants_reg.csv"
 res_id_dep = "prop_variants_dep.csv"
 trendType = "normal"
-nom = "Taux de variant A"
-unite = "%"
+nom = "Mutation E484K "
+unite = "% Mutation E484K "
 
 [prop_variant_B]
 dataset = "donnees-de-laboratoires-pour-le-depistage-indicateurs-sur-les-mutations"
@@ -171,8 +171,8 @@ res_id_fra = "prop_variants_fra.csv"
 res_id_reg = "prop_variants_reg.csv"
 res_id_dep = "prop_variants_dep.csv"
 trendType = "normal"
-nom = "Taux de variant B"
-unite = "%"
+nom = "Mutation E484Q"
+unite = "% Mutation E484Q"
 
 [prop_variant_C]
 dataset = "donnees-de-laboratoires-pour-le-depistage-indicateurs-sur-les-mutations"
@@ -180,5 +180,5 @@ res_id_fra = "prop_variants_fra.csv"
 res_id_reg = "prop_variants_reg.csv"
 res_id_dep = "prop_variants_dep.csv"
 trendType = "normal"
-nom = "Taux de variant C"
-unite = "%"
+nom = "Mutation L452R "
+unite = "% Mutation L452R "
