Titres indicateurs variants

--- a/config.toml
+++ b/config.toml
@@ -162,8 +162,8 @@ res_id_fra = "prop_variants_fra.csv"
 res_id_reg = "prop_variants_reg.csv"
 res_id_dep = "prop_variants_dep.csv"
 trendType = "normal"
-nom = "Mutation E484K "
-unite = "% Mutation E484K "
+nom = "Mutation E484K (dont variants Beta, Gamma)"
+unite = "% Mutation E484K"
 
 [prop_variant_B]
 dataset = "donnees-de-laboratoires-pour-le-depistage-indicateurs-sur-les-mutations"
@@ -180,5 +180,5 @@ res_id_fra = "prop_variants_fra.csv"
 res_id_reg = "prop_variants_reg.csv"
 res_id_dep = "prop_variants_dep.csv"
 trendType = "normal"
-nom = "Mutation L452R "
-unite = "% Mutation L452R "
+nom = "Mutation L452R (dont variant Delta)"
+unite = "% Mutation L452R"
