--- a/config.toml
+++ b/config.toml
@@ -92,6 +92,7 @@ unite_short = ""
 
 [vaccins_premiere_dose]
 dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
+res_id_nat = "vaccin_rappel_nat.csv"
 res_id = "vaccin.csv"
 trendType = "abnormal"
 nom = "Nombre de personnes ayant reçu au moins une dose"
@@ -100,6 +101,7 @@ unite_short = ""
 
 [vaccins_vaccines]
 dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
+res_id_nat = "vaccin_rappel_nat.csv"
 res_id = "vaccin.csv"
 trendType = "abnormal"
 nom = "Nombre de personnes complètement vaccinées"
